# stock_price_prediction_using_subreddit_post

./: README.md  demo.py  pyproject.toml  requirements.txt  setup.py  template.py
notebook/: mongoDB_demo.ipynb  sample_reddit_data_50.json
src/exception/: __init__.py
src/logger/: __init__.py
